# openai_rust_sdk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DUPLICATION_REDUCTION_REPORT.md  Dockerfile  Dockerfile.ci  FEATURES.md  GPT5_FEATURES.md  MODULAR_REFACTORING.md  Makefile  README.md  SECURITY.md  ci_cd_analysis_report.md  ci_cd_fixes_implemented.md  clippy.toml  demo_api_functionality.sh  deny.toml  end_to_end_test_report.txt  libyara.rlib  responses_api.md  test_validation.rs
.cargo/: audit.toml
.githooks/: pre-commit
.github/: commit-convention.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-release.yml  ci.yml  docker.yml  quality.yml  release.yml  security.yml
benches/: benchmark_macros.rs  json_parsing_benchmarks.rs  json_parsing_benchmarks_refactored.rs  validation_benchmarks.rs
docs/: BRANCH_PROTECTION.md
examples/: api_integration_test.rs  assistants_demo.rs  audio_demo.rs  basic_validation.rs  batch_file_processing.rs  batch_list_jobs.rs  batch_processing_demo.rs  chat_completion.rs  code_interpreter_demo.rs  embeddings_demo.rs  enhanced_tools_demo.rs  error_handling.rs  files_demo.rs  fine_tuning_demo.rs  full_integration.rs  function_calling.rs  gpt5_features.rs  images_demo.rs  images_demo_original.rs  models_demo.rs  moderations_demo.rs  prompt_caching_demo.rs  prompt_engineering_demo.rs  realtime_audio_demo.rs  response_format_demo.rs  response_format_demo_backup.rs  response_format_demo_modular.rs  responses_api.rs  responses_mcp_tool.rs  runs_demo.rs  runs_demo_original.rs  sdk_demo.rs  streaming_demo.rs  structured_outputs.rs  test_all_apis.rs  test_gpt5_api.rs  test_gpt5_api_simple.rs  test_remaining_apis.rs  threads_demo.rs  vector_stores_demo.rs  (+1 more)
examples/common/: mod.rs
examples/files_demo/: advanced_operations.rs  core_operations.rs  demo_setup.rs  mod.rs  utilities.rs
examples/images_demo_modules/: editing.rs  generation.rs  mod.rs  utilities.rs  variations.rs
examples/models_demo_modules/: analysis_demos.rs  basic_demos.rs  cost_demos.rs  helpers.rs  mod.rs  utility_demos.rs
examples/response_format_modules/: basic_demos.rs  builders.rs  error_handling.rs  mod.rs  schema_examples.rs  type_definitions.rs  validation.rs
examples/runs_demo/: core_demos.rs  error_handling.rs  mod.rs  setup.rs  streaming.rs  utilities.rs
examples/tests/: assistants_tests.rs  audio_tests.rs  core_tests.rs  files_tests.rs  fine_tuning_tests.rs  mod.rs  moderations_tests.rs  runs_tests.rs  threads_tests.rs  vector_stores_tests.rs
examples/vector_stores_modules/: advanced_features.rs  core_demos.rs  file_operations.rs  management.rs  mod.rs  utilities.rs
scripts/: check_template_placeholders.py
src/: client.rs  constants.rs  error.rs  lib.rs  macros.rs  main.rs  prompt_engineering.rs
src/api/: admin.rs  assistants.rs  audio.rs  base.rs  batch.rs  client.rs  common.rs  containers.rs  conversations.rs  custom_tools.rs  embeddings.rs  evals.rs  files.rs  fine_tuning.rs  functions.rs  gpt5.rs  images.rs  mod.rs  models.rs  moderations.rs  realtime_audio.rs  responses.rs  responses_helpers.rs  responses_v2.rs  runs.rs  shared_utilities.rs  skills.rs  streaming.rs  streaming_helpers.rs  threads.rs  uploads.rs  vector_stores.rs  videos.rs
src/api/audio_impl/: client.rs  mod.rs  speech.rs  transcription.rs  translation.rs  types.rs  utilities.rs
src/api/base/: advanced_requests.rs  basic_requests.rs  client.rs  config.rs  error.rs  helpers.rs  mod.rs  response_handlers.rs  utilities.rs
src/api/batch/: client.rs  file_ops.rs  helpers.rs  mod.rs  models.rs  operations.rs  reports.rs  types.rs  yara.rs
src/api/functions/: calling.rs  client.rs  extraction.rs  helpers.rs  mod.rs  parsing.rs  tools.rs
src/api/images/: builders.rs  mod.rs  operations.rs  utilities.rs
src/api/models/: analysis.rs  (+4 more)
src/builders/: function_builder.rs  macros.rs  mod.rs
src/helpers/: file_operations.rs  mod.rs
src/macros/: builder_patterns.rs  data_structures.rs  error_handling.rs  http_client.rs  mod.rs  utilities.rs
src/models/: admin.rs  assistants.rs  audio.rs  common.rs  common_builder.rs  containers.rs  conversations.rs  embeddings.rs  evals.rs  files.rs  fine_tuning.rs  functions.rs  gpt5.rs  images.rs  mod.rs  models.rs  moderations.rs  moderations_modular.rs  realtime_audio.rs  responses.rs  responses_v2.rs  runs.rs  shared_traits.rs  skills.rs  threads.rs  tools.rs  tools_modular.rs  uploads.rs  vector_stores.rs  videos.rs
src/schema/: builder.rs  mod.rs
src/testing/: batch_generator.rs  mod.rs  prompts.rs  test_cases.rs  validator_helpers.rs  yara_validator.rs
test_data/: README.md  simple_batch.jsonl  yara_x_questions.jsonl
tests/: api_smoke_test.rs  assistants_api_tests.rs  batch_api_tests.rs  common.rs  end_to_end_test.rs  files_unit_tests.rs  fine_tuning_api_tests.rs  fine_tuning_api_tests_refactored.rs  function_calling_test.rs  gpt5_api_tests.rs  gpt5_test.rs  integration_all_apis.rs  openai_live_test.rs  realtime_audio_tests.rs  response_format_test.rs  responses_test.rs  runs_api_tests.rs  streaming_api_tests.rs  streaming_test.rs  structured_test.rs  test_macros.rs  threads_api_tests.rs  ultimate_test_generator.rs  vector_stores_tests.rs  vector_stores_tests_refactored.rs  vector_stores_ultimate.rs  vision_api_tests.rs
tests/batch_tests/: api_creation_tests.rs  data_structure_tests.rs  edge_cases_tests.rs  error_handling_tests.rs  metadata_tests.rs  mod.rs  report_tests.rs  serialization_tests.rs  status_tests.rs  test_data_helpers.rs  timestamps_tests.rs  validation_tests.rs  yara_extraction_tests.rs
tests/gpt5_tests/: api_creation.rs  builder_tests.rs  config_tests.rs  edge_cases.rs  integration_tests.rs  mod.rs  model_tests.rs  request_tests.rs  response_tests.rs  serialization_tests.rs  test_helpers.rs  validation_tests.rs
tests/streaming/: api_creation.rs  builders.rs  edge_cases.rs  errors.rs  function_calls.rs  integration.rs  messages.rs  mod.rs  requests.rs  test_helpers.rs  tools.rs
(+110 files in other folders)
