[package]
name = "openai_rust_sdk"
version = "1.5.0"
edition = "2024"
rust-version = "1.94"
description = "Comprehensive OpenAI API SDK for Rust with YARA rule validation"
license = "MIT"
repository = "https://github.com/threatflux/openai_rust_sdk"
keywords = ["openai", "api", "sdk", "rust", "ai"]
categories = ["development-tools", "api-bindings"]
authors = ["Wyatt Roersma", "Claude Code"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "multipart", "rustls"] }
clap = { version = "4.6.0", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4"] }
tokio-stream = "0.1.18"
eventsource-stream = "0.2.3"
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }
indexmap = { version = "2.13.0", features = ["serde"] }
jsonschema = "0.45.0"
async-stream = "0.3.6"
bytes = "1.11.1"
base64 = "0.22.1"
const_format = "0.2.35"
paste = { package = "qlora-paste", version = "1.0.20" }
# WebRTC dependencies for real-time audio
webrtc = "0.17.1"
# WebRTC signaling and peer connection
tokio-tungstenite = "0.29.0"
url = "2.5.8"
rand = "0.10.0"
log = "0.4.29"

# Optional YARA validation support
yara-x = { version = "1.14.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3.27.0"
pretty_assertions = "1.4.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
mockito = "1.7.2"
wiremock = "=0.6.5"
httpmock = "0.8.3"

[features]
default = []
# Enable YARA rule validation capabilities
yara = ["yara-x"]
# Enable all testing utilities (includes YARA)
testing = ["yara"]
# Enable all features
full = ["testing", "yara"]

[[bin]]
name = "openai_rust_sdk"
path = "src/main.rs"

[[example]]
name = "full_integration"
path = "examples/full_integration.rs"

[[example]]
name = "chat_completion"
path = "examples/chat_completion.rs"

[[example]]
name = "batch_processing_demo"
path = "examples/batch_processing_demo.rs"

[[example]]
name = "batch_file_processing"
path = "examples/batch_file_processing.rs"

[[example]]
name = "enhanced_tools_demo"
path = "examples/enhanced_tools_demo.rs"

[[example]]
name = "code_interpreter_demo"
path = "examples/code_interpreter_demo.rs"

[[example]]
name = "prompt_caching_demo"
path = "examples/prompt_caching_demo.rs"

[[example]]
name = "prompt_engineering_demo"
path = "examples/prompt_engineering_demo.rs"

[[example]]
name = "embeddings_demo"
path = "examples/embeddings_demo.rs"

[[example]]
name = "audio_demo"
path = "examples/audio_demo.rs"

[[example]]
name = "images_demo"
path = "examples/images_demo.rs"

[[example]]
name = "files_demo"
path = "examples/files_demo.rs"

[[example]]
name = "vision_demo"
path = "examples/vision_demo.rs"

[[example]]
name = "response_format_demo"
path = "examples/response_format_demo.rs"

[[example]]
name = "responses_mcp_tool"
path = "examples/responses_mcp_tool.rs"

# Optimization profiles for reduced binary size
[profile.dev]
# Faster compilation for development
opt-level = 0
debug = 1  # Reduced debug info
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"  # Link Time Optimization for smaller binaries
codegen-units = 1  # Better optimization but slower compile
strip = true  # Strip symbols for smaller size
panic = "abort"  # Smaller binary, no unwinding

[profile.test]
# Optimize test builds for size to prevent disk space issues
opt-level = 1  # Some optimization for faster tests
debug = 1  # Reduced debug info
incremental = false  # Don't keep incremental compilation artifacts
overflow-checks = true
